--- a/gb/23/10/25/n14103010.md
+++ b/gb/23/10/25/n14103010.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>李佳琦双11预售惹麻烦 背后公司恐遭重罚</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/09/id14071707-GettyImages-1359954714-600x400.jpg" />
 <h6>大陆“网红一哥”李佳琦资料照。(VCG/VCG via Getty Images△)
 </h6>
 <hr>
-	<p>【大纪元2023年10月26日讯】（大纪元记者李净综合报导）10月24日晚8点，2023年大陆电商平台双11开启预售。据数据显示，首日4小时，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%8E%E4%BD%B3%E7%90%A6.md#1">李佳琦</a>等头部直播间的交易额率先破亿。不过，李佳琦卷入烘培电器品牌海氏的“全网最低价”风波。</p>
-<p>综合多家陆媒报导，10月24日，中国电商巨头京东集团的一位销售人员在朋友圈发文称，京东收到烘培电器品牌海氏的律师函投诉，由于某款海氏烤箱的京东价格低于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%8E%E4%BD%B3%E7%90%A6.md#1">李佳琦</a>直播售价，违反了他们与李佳琦签署的“底价协议”，要求京东赔偿巨额违约金。</p>
+	<p>【大纪元2023年10月26日讯】（大纪元记者李净综合报导）10月24日晚8点，2023年大陆电商平台双11开启预售。据数据显示，首日4小时，李佳琦等头部直播间的交易额率先破亿。不过，李佳琦卷入烘培电器品牌海氏的“全网最低价”风波。</p>
+<p>综合多家陆媒报导，10月24日，中国电商巨头京东集团的一位销售人员在朋友圈发文称，京东收到烘培电器品牌海氏的律师函投诉，由于某款海氏烤箱的京东价格低于李佳琦直播售价，违反了他们与李佳琦签署的“底价协议”，要求京东赔偿巨额违约金。</p>
 <p>京东采销人员则针对超级头部主播李佳琦“二选一”的底价协议，呼吁相关部门介入管理“伪全网最低价”。</p>
 <p>对此，李佳琦直播间运营方美ONE否认指控，并表示李佳琦直播间没有签订所谓的“底价协议”，同时也从未要求品牌商进行任何的二选一。对于李佳琦直播间的定价权争议，美ONE表示，商品的定价权在于品牌商。</p>
 <h2>“秘密协议”曝光 律师：如坐实 罚款为其上一年销售额的1%-10%</h2>
@@ -27,35 +27,35 @@
 <p>责任编辑：李穹#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/20/n13806772.md#1">中共网信办清理近14亿账号 被指钳制言论自由</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/17/n13999157.md#1">中国脱口秀演员因言获罪 举报者官方背景曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050370.md#1">传大连政府财政紧张 警察工资也被延迟发放</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102234.md#1">财政危机 中共发1万亿元国债向地方“输血”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/20/n13806772.md#1">中共网信办清理近14亿账号 被指钳制言论自由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/17/n13999157.md#1">中国脱口秀演员因言获罪 举报者官方背景曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/8/n14050370.md#1">传大连政府财政紧张 警察工资也被延迟发放</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/24/n14102234.md#1">财政危机 中共发1万亿元国债向地方“输血”</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/13/n11449283.md#1" target="_blank">袁斌：巫宁坤们的遭遇告诉后人什么</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/15/2/27/n4375491.md#1" target="_blank">归宇斌: 江泽民导演天安门伪火的两个意图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/1/n10014980.md#1" target="_blank">林辉：文革荒诞事 误损毛像引出大祸端</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/22/n10581061.md#1" target="_blank">法轮功义务传功遍全球 事实亲历揭穿中共诽谤</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096041.md#1">扎堆成仙？九月初九重阳节原来不是老人节！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14096835.md#1">皇帝小故事：旅舍女老板腹中胎儿预言天子到！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/18/n14097506.md#1">【古道人生】会算命的道士原来是只大蝎子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099163.md#1">【未解之谜】以色列的第三圣殿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14097009.md#1">看达?芬奇《抱银貂的女子》细节中别有洞天</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14101732.md#1">【环球直击】王毅本周访美 外界关注拜习会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102803.md#1">【时事金扫描】中共查富士康 台湾大选眼花缭乱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14101949.md#1">快讯：李尚福落马 秦刚被免国务委员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102103.md#1">李尚福秦刚案内斗激烈 专家：北京的黑天鹅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102157.md#1">李尚福三大职务被免 分析：习为何震怒？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100816.md#1">传杨颖出售北京5亿豪宅 疑陷舆论风波拟跑路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100799.md#1">遭封杀逾两年 赵薇被爆缺席家公葬礼 引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101141.md#1">汪峰章子怡结束8年婚姻 发声明证实离婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101485.md#1">大陆婚恋综艺有魔咒？章子怡汪峰离婚引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101076.md#1">金钟58收视 陈汉典致词蔡淑臻封后飙最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091082.md#1">50岁后的养生哲学 6类食物一定要多吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100625.md#1">咖啡是百药之王 78岁名医分享秘诀让你越喝越健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100380.md#1">秋冬老咳嗽？中医荐5食疗方 白色最养肺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101124.md#1">为什么你能记住多年前的歌词？ 专家解析</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14099870.md#1">4类人是发炎体质 中医7秘笈 护肠道提升免疫力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/25/n14103010.htm">李佳琦双11预售惹麻烦 背后公司恐遭重罚</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/10/25/n14103010.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/10/25/n14103010.htm">李佳琦双11预售惹麻烦 背后公司恐遭重罚</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/10/25/n14103010.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
